Fix bug 280982: updates for several disjoint areas would get coalesced because the CHBrowserView, which is the opaque ancestor view for all the ChildViews, used a suboptimal drawing path that redraw the union of the dirty rects. r=mento. Fix bug 301432: in +browserViewFromDOMWindow:, make sure we use the top nsIDOMWindow of the tree so that we get a CHBrowserView for nsIDOMWindows of subframes. Fixes JS alerts on framed pages (like gmail).